Feature/refactor (#79)
* refacactory